# arm-elf-linker

./: .gitignore  Makefile.am  README  README.md  configure.ac  elf_fusion_main.c  mon_readelf_main.c
Examples_fusion/: .gitignore  Makefile.am
include/: elf_affichage_contenu.h  elf_affichage_entete.h  elf_affichage_relocations.h  elf_affichage_sections.h  elf_affichage_symboles.h  elf_fusion.h  elf_fusion_internal.h  elf_fusion_relocations.h  elf_fusion_sections.h  elf_fusion_symbols.h  elf_fusion_writer.h  elf_lecture.h
src/: elf_affichage_contenu.c  elf_affichage_entete.c  elf_affichage_relocations.c  elf_affichage_sections.c  elf_affichage_symboles.c  elf_fusion.c  elf_fusion_relocations.c  elf_fusion_sections.c  elf_fusion_symbols.c  elf_fusion_writer.c  elf_lecture.c
tests/: test_elf_output.sh  test_readelf.sh  test_relocation_merge.sh  test_section_merge.sh  test_symbol_merge.sh
tests/fixtures/elf_output/: test1_a.s  test1_b.s  test2_a.s  test2_b.s  test3_a.s  test3_b.s  test4_a.s  test4_b.s  test5_a.s  test5_b.s  test6_a.s  test6_b.s
tests/fixtures/readelf/: test_invalide_non_elf.txt
tests/fixtures/relocation_merge/: test1_a.s  test1_b.s  test2_a.s  test2_b.s  test3_a.s  test3_b.s  test4_a.s  test4_b.s  test5_a.s  test5_b.s  test6_a.s  test6_b.s  test7_a.s  test7_b.s  test8_a.s  test8_b.s
tests/fixtures/section_merge/: test1_a.s  test1_b.s  test2_a.s  test2_b.s  test3_a.s  test3_b.s  test4_a.s  test4_b.s  test5_a.s  test5_b.s  test6_a.s  test6_b.s
tests/fixtures/symbol_merge/: test1_a.s  test1_b.s  test2_a.s  test2_b.s  test3_a.s  test3_b.s  (+8 more)
